# Object-Following-with-Behavior-Tree-ML-Tracking

./: .gitignore  LICENSE  README.md  ROS_CaseStudy_Topic.pptx  TRAINING_ARCHITECTURE.md  TRAINING_MODE_GUIDE.md  moving_world.wbt
ros2_ws/: DATA_COLLECTION_GUIDE.md  REPLAY_COMMANDS.md  TELEOP_AUTOMATION_GUIDE.md  TRAINING_GUIDE.md  TRAINING_STEPS.md  UPDATES_SUMMARY.md  prepare_dataset.py  train_model.py  train_yolov8.py
ros2_ws/runs/detect/obstacle_detector/: args.yaml  results.csv
ros2_ws/src/object_following_behavior/: package.xml  setup.cfg  setup.py
ros2_ws/src/object_following_behavior/launch/: behavior_node.launch.py
ros2_ws/src/object_following_behavior/object_following_behavior/: behavior_node.py
ros2_ws/src/object_following_bt/: package.xml  setup.cfg  setup.py
ros2_ws/src/object_following_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/object_following_integration/: CMakeLists.txt  package.xml
ros2_ws/src/object_following_integration/launch/: launch_3node_architecture.launch.py  launch_data_collection.launch.py  launch_final_world.launch.py  launch_moving_world.launch.py  launch_object_following_world.launch.py  launch_training.launch.py  launch_with_camera_world.launch.py
ros2_ws/src/object_following_integration/resource/: ros2control.yml  turtlebot_webots_with_camera.urdf
ros2_ws/src/object_following_integration/worlds/: .complete_room_environment.wbproj  .object_following.wbproj  .simple_room.wbproj  .turtlebot3_simple_with_camera.wbproj  camera_enabler.py  camera_window_opener.py  final_world.wbt  moving_target_controller.py  moving_world.wbt  object_following_world.wbt  person_mover.py  training_world.wbt  turtlebot3_simple_with_camera.wbt
ros2_ws/src/object_following_integration/worlds/controllers/moving_target_controller/: moving_target_controller.py
ros2_ws/src/object_following_integration/worlds/controllers/person_mover/: person_mover.py
ros2_ws/src/object_following_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/object_following_vision/: package.xml  setup.cfg  setup.py
ros2_ws/src/object_following_vision/launch/: vision_node.launch.py
ros2_ws/src/object_following_vision/object_following_vision/: __init__.py  data_collector_node.py  vision_yolo_node.py  yolov8_tracker_node.py
ros2_ws/src/object_following_vision/object_following_vision/utils/: __init__.py
ros2_ws/training_data/: LABELING_GUIDE.txt  README.txt  organize_mixed_images.py
ros2_ws/training_data/combined_dataset/: dataset.yaml
ros2_ws/training_data/obstacles_dataset/: dataset.yaml
ros2_ws/training_data/yolo_dataset/: dataset.yaml
(+21 files in other folders)
