<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_following_behavior</name>
  <version>0.1.0</version>
  <description>Behavior Tree node for object following robot state management</description>
  <maintainer email="team@example.com">Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>object_following_vision</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

