<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_following_vision</name>
  <version>0.1.0</version>
  <description>ROS2 vision package for object detection and tracking using YOLOv8 and DeepSORT</description>
  <maintainer email="team@example.com">Team Member 1</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>object_following_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
